quick hack to fix border overlap issue (may find a better fix later)

--- a/internal/static/style.css
+++ b/internal/static/style.css
@@ -146,6 +146,10 @@ windows-window {
 	outline: none;
 }
 
+windows-window > * {
+	padding: 0 1px;
+}
+
 .popout {
 	display: inline-block;
 	margin-left: 5px;
